--- a/Projetos/Conversor de moeda/index.css
+++ b/Projetos/Conversor de moeda/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -10,7 +11,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #772FD3;
+  background: #8C51FD;
 }
 
 .logo {
@@ -20,9 +21,80 @@
 
 .container-form {
   background: #E5E5E5;
-  width: 400px;
-  padding: 25px;
+  padding: 44px 24px 23px 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 10px;
+}
+
+.convert-paragraph {
+  margin-bottom: 6px;
+  font-weight: 400;
+  font-size: 14px;
+  color: #777777;
+}
+
+.convert-values {
+  margin-bottom: 24px;
+  width: 327px;
+  height: 48px;
+  background: #FFFFFF;
+  border: 1px solid #BBBBBB;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #555555;
+  padding: 15px;
+}
+
+
+.converted-value {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+}
+
+.submit-button {
+  display: block;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0 auto 36px auto;
+  width: 327px;
+  height: 48px;
+  background: #772FD3;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.36);
+  cursor: pointer;
+}
+
+.container-results {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #772FD3;
+  border-radius: 20px;
+}
+
+.container-results>figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 12px 0 4px 0;
+}
+
+.result-paragraph {
+  font-weight: 400;
+  font-size: 14px;
+  color: #777777;
+}
+
+.result-value {
+  margin: 3px 0 14px 0;
+  font-weight: 700;
+  font-size: 20px;
+  color: #555555;
 }
